force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/B25__Dynamic_Grouping_Field__c.object-meta.xml
<CustomObject>
    <description>Specifies a field that the user can select on the calendar to group dimension objects together based on
		the value of this field.</description>
    <label>Dynamic Grouping Field</label>
    <nameField>
        <label>Dynamic Grouping Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Dynamic Grouping Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>