force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/fields/B25__Calendar__c.field-meta.xml
<CustomField>
    <fullName>B25__Calendar__c</fullName>
    <description>The calendar this lookup field is available on.</description>
    <inlineHelpText>Le calendrier sur lequel ce champ de recherche est disponible.</inlineHelpText>
    <label>Calendar</label>
    <referenceTo>B25__Calendar__c</referenceTo>
    <relationshipLabel>Dynamic Grouping Fields</relationshipLabel>
    <relationshipName>Dynamic_Grouping_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>