force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/fields/B25__Default__c.field-meta.xml
<CustomField>
    <fullName>B25__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This is the grouping applied by default for this calendar.</description>
    <inlineHelpText>Il s’agit du regroupement appliqué par défaut pour ce calendrier.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>