force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/fields/B25__Hierarchical__c.field-meta.xml
<CustomField>
    <fullName>B25__Hierarchical__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the field specified in the name of this record has to be a self-referencing lookup.
		Booker25 will then group the dimension records hierarchically.</description>
    <inlineHelpText>Lorsque cette option est activée, le champ spécifié dans le nom de cet enregistrement doit être une recherche autoréférencée. Booker25 regroupera alors les enregistrements de dimension de manière hiérarchique.</inlineHelpText>
    <label>Hierarchical</label>
    <type>Checkbox</type>
</CustomField>