force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/fields/B25__Label__c.field-meta.xml
<CustomField>
    <fullName>B25__Label__c</fullName>
    <description>The label shown to users in the grouping picklist. Leave empty to use the field label of the grouping
		field.</description>
    <inlineHelpText>Le libellé affiché aux utilisateurs dans la liste de sélection de regroupement. Laissez-le vide pour utiliser le libellé du champ de regroupement.</inlineHelpText>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>