force-app/main/default/objects/B25__Dynamic_Grouping_Field__c/fields/B25__No_Grouping__c.field-meta.xml
<CustomField>
    <fullName>B25__No_Grouping__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, this grouping option will represent no grouping at all. Validation of the name field of
		this record will then be skipped.</description>
    <inlineHelpText>Lorsque cette option est activée, cette option de regroupement ne représente aucun regroupement. La validation du champ de nom de cet enregistrement sera alors ignorée.</inlineHelpText>
    <label>No Grouping</label>
    <type>Checkbox</type>
</CustomField>